--- a/modules/ROOT/pages/conf-examples/office-integration.adoc
+++ b/modules/ROOT/pages/conf-examples/office-integration.adoc
@@ -26,7 +26,7 @@ Note that it is not mandatory to use and configure both example office applicati
 
 == Hardware Requirements
 
-With focus on the office container, ONLYOFFICE provides a link with some guidance for hardware requirements depending on concurrent active users when using their community edition and docker, see {onlyoffice_hw_url}[ONLYOFFICE Docs Community Edition for Docker system requirements] for more details. This information can give an estimation without any guarantees.
+With focus on the office container, ONLYOFFICE provides a link with some guidance for hardware requirements depending on concurrent active users when using their community edition and docker. See {onlyoffice_hw_url}[ONLYOFFICE Docs Community Edition for Docker system requirements] for more details. This information gives estimates without any guarantees.
 
 == Requirements
 
