--- a/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-users.adoc
@@ -33,40 +33,49 @@ Example cases for expired uploads::
 There are two commands available to manage unfinished uploads::
 [source,bash]
 ----
-ocis storage-users uploads
+ocis storage-users uploads <command>
 ----
+
 [source,plaintext]
 ----
-...
 COMMANDS:
    list     Print a list of all incomplete uploads
    clean    Clean up leftovers from expired uploads
-...
 ----
 
 === Command Examples
 
 Command to identify incomplete uploads::
++
+--
 [source,bash]
 ----
 ocis storage-users uploads list
 ----
+
 [source,plaintext]
 ----
 Incomplete uploads:
  - 455bd640-cd08-46e8-a5a0-9304908bd40a (file_example_PPT_1MB.ppt, Size: 1028608, Expires: 2022-08-17T12:35:34+02:00)
 ----
+--
+
+{empty}
 
 Command to clear expired uploads::
++
+--
 [source,bash]
 ----
 ocis storage-users uploads clean
 ----
+
 [source,plaintext]
 ----
 Cleaned uploads:
 - 455bd640-cd08-46e8-a5a0-9304908bd40a (Filename: file_example_PPT_1MB.ppt, Size: 1028608, Expires: 2022-08-17T12:35:34+02:00)
 ----
+--
 
 == Configuration
 
