--- a/modules/ROOT/pages/maintenance/b-r/restore.adoc
+++ b/modules/ROOT/pages/maintenance/b-r/restore.adoc
@@ -11,20 +11,22 @@ Though no restore strategies are covered, reading this document can add valuable
 
 == General Considerations
 
-Same as described in the xref:maintenance/backup.adoc#general-considerations[backup documentation], Infinite Scale can run in two different setups when it comes to storing data:
+Infinite Scale can run in two different setups when it comes to storing data:
 
 * All data, meaning configuration, blobs and metadata, is stored on POSIX-compliant filesystems.
 * Blobs are stored on an S3-compliant storage while configuration and metadata are stored on POSIX.
 
-See the linked backup documentation for more details.
+See the xref:maintenance/b-r/backup.adoc#general-considerations[backup documentation] for more details.
 
-When it comes to restoring data, keep in mind that you always have to restore all three data sets consistently:
+When it comes to restoring data, keep in mind that you always have to restore all data sets consistently:
 
 * config data
-* metadata ^1^
-* blobs ^1^
+* system data ^1^
+* metadata ^2^
+* blobs ^2^
 
-(1) ... For POSIX-only environments, the location for blobs and metadata is currently the same. When using S3, the location differs.
+(1) ... System data has, if not otherwise defined, a common root path which is the same root path as for metadata. Individual paths can be defined for particular services though. See the xref:deployment/general/general-info.adoc#base-data-directory[Base Data Directory] for more details. +
+(2) ... For POSIX-only environments, the location for blobs and metadata is the same. When using S3, the location differs.
 
 Valid for all restore procedures:
 
