--- a/modules/ROOT/pages/maintenance/commands/commands.adoc
+++ b/modules/ROOT/pages/maintenance/commands/commands.adoc
@@ -1,7 +1,7 @@
 = Maintenance Commands
 :toc: right
 
-:description: There are commands availabe to maintain the Infinite Scale instance. This document gives an overview about the available commands and links to the related service where they are implemented for more details.
+:description: There are commands availabe to maintain the Infinite Scale instance. This document gives an overview of the available commands and links to the related service where they are implemented for more details.
 
 == Introduction
 
@@ -12,14 +12,14 @@
 * Calling a service in the examples is made via the single binary.
 * Generic call: +
 `ocis <service name> arguments options`.
-* This changes if services would be available as executable on their own, then it would be: +
+* This changes if some services are available as executable on their own, then it would be: +
 `<service name> arguments options`. +
 This could happen if services are developed which are not shipped as part of the single binary.
 ====
 
 == Manage Expired Uploads
 
-Compared to unfinished uploads which are handled by the system, managing expired uploads can be a necessity as those files can pile up, blocking storage resources and need to be removed by command regularily. See the xref:{s-path}/storage-users.adoc#manage-unfinished-uploads[Manage Unfinished Uploads] section at the _Storage Users_ service for details.
+Compared to unfinished uploads which are handled by the system, managing expired uploads can be a necessity as those files can pile up, blocking storage resources and need to be removed by command regularly. See the xref:{s-path}/storage-users.adoc#manage-unfinished-uploads[Manage Unfinished Uploads] section at the _Storage Users_ service for details.
 
 == Reindex a Space for Search
 
