--- a/modules/ROOT/pages/deployment/services/s-list/groups.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/groups.adoc
@@ -1,9 +1,8 @@
 = Groups Service Configuration
 :toc: right
+:description: The Infinite Scale Group service
 
 :ext_name: groups
-
-:description: The Infinite Scale Group service provides
 
 == Introduction
 
