--- a/modules/ROOT/pages/deployment/services/s-list/storage-publiclink.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-publiclink.adoc
@@ -1,9 +1,8 @@
 = Storage-Publiclink Service Configuration
 :toc: right
+:description: The Infinite Scale Storage-Publiclink service
 
 :ext_name: storage-publiclink
-
-:description: The Infinite Scale Storage-Publiclink
 
 == Introduction
 
