--- a/modules/ROOT/pages/deployment/services/s-list/webdav.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/webdav.adoc
@@ -1,13 +1,12 @@
 = WebDAV Service Configuration
 :toc: right
+:description: The webdav service, like the ocdav service, provides a HTTP API following the webdav protocol.
 
 :ext_name: webdav
 
-:description: The webdav service, like the xref:{s-path}/ocdav.adoc[ocdav] service, provides a HTTP API following the webdav protocol. It receives HTTP calls from requestors like clients and issues gRPC calls to other services executing these requests. After the called service has finished the request, the webdav service will render their responses in `xml` and sends them back to the requestor.
-
 == Introduction
 
-{description}
+{description}  It receives HTTP calls from requestors like clients and issues gRPC calls to other services executing these requests. After the called service has finished the request, the webdav service will render their responses in `xml` and sends them back to the requestor. Also see the xref:{s-path}/ocdav.adoc[ocdav] service. 
 
 == Default Values
 
