--- a/modules/ROOT/partials/deployment/services/env-and-yaml.adoc
+++ b/modules/ROOT/partials/deployment/services/env-and-yaml.adoc
@@ -63,7 +63,7 @@ ifndef::no_yaml[]
 
 === YAML Example
 
-Note that the filename shown below is by purpose. +
+Note that the filename shown below has been chosen on purpose. +
 If you want to use it with your own configuration, you must name it `{ext_name}.yaml`
 
 [tabs]
